Added functionality to the button When clicking the button a prompt ask the user to enter a number to create a new grid. After the user enters the number the old grid is removed and a new grid is created with the ability to still 'draw' it.

--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,12 @@ body {
     border: 1px solid #000;
 }
 
+#bttn {
+
+}
+
 .square {
     box-sizing: border-box;
-    flex-basis: calc(100%/16);
+    /* flex-basis: calc(100%/16); */
     border: 1px solid #ccc;
 }
